--- a/client/package.json
+++ b/client/package.json
@@ -7,15 +7,21 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "lodash": "^4.17.11",
     "vue": "^2.6.6",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuetify": "^1.5.7",
+    "vuex": "^3.0.1",
+    "vuex-persistedstate": "^2.5.4",
+    "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.5.0",
     "@vue/cli-service": "^3.5.0",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
+    "material-design-icons-iconfont": "^4.0.5",
     "vue-template-compiler": "^2.5.21"
   }
 }
