--- a/client/package.json
+++ b/client/package.json
@@ -17,8 +17,10 @@
     "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.8.1",
     "@vue/cli-plugin-babel": "^3.5.0",
     "@vue/cli-service": "^3.5.0",
+    "font-awesome": "^4.7.0",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
     "material-design-icons-iconfont": "^4.0.5",
