--- a/client/package.json
+++ b/client/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "client",
-  "version": "0.1.0",
+  "name": "todo-app",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "start": "node server.js"
   },
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.18.0",   
+    "express": "^4.16.4",
     "lodash": "^4.17.11",
     "vue": "^2.6.6",
     "vue-router": "^3.0.1",
